--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     			<a href="#" class="header-top__logo">Техномарт</a>
     			<form action="#" class="header-top__search">
     				<input type="submit">
-                    <input type="text" placeholder="Поиск">
+            <input type="text" placeholder="Поиск">
     			</form>
     			<ul class="header-top__panel">
     				<li>
-                        <a class="header-top__bookmark" href="#top">Закладки:0</a>
-                    </li>
-                    <li>
-                        <a class="header-top__basket" href="#">Корзина</a>
-                    </li>
-                    <li>
-                        <a  class="header-top__booking" href="#">Оформить Заказ</a>
-                    </li>
+              <a class="header-top__bookmark" href="#top">Закладки:0</a>
+            </li>
+            <li>
+              <a class="header-top__basket" href="#">Корзина</a>
+            </li>
+            <li>
+              <a  class="header-top__booking" href="#">Оформить Заказ</a>
+            </li>
     			</ul>
     		</div>
     		<div class="container">
@@ -31,45 +31,47 @@
     			</div>
     			<div class="header-middle__contact">
     				<div class="header-middle__phone">+7(812)555-05-55</div>
-       	            <p>г. Санкт-петербург, ул. Б. Конюшенная, д.19/8</p>
+       	    <p>г. Санкт-петербург, ул. Б. Конюшенная, д.19/8</p>
     			</div>
-    			<div class="header-middle__user">
-    				<a href="#"><i class="icon-enter"></i>Вход</a>
-                    <a href="#">Регистрация</a>
+    			<div class="header-middle__making">
+    			    <div class="header-middle__user">
+    				    <a href="#"><i class="icon-enter"></i>Вход</a>
+                <a href="#">Регистрация</a>
+    			    </div>
+    			    <ul class="header-middle__data">
+    				    <li>
+       	          <a href="#">Мои заказы</a>
+                </li>
+                <li>
+       	          <a href="#">Личный кабинет</a>
+                </li>
+    			    </ul>
     			</div>
-    			<ul class="header-middle__data">
-    				<li>
-       	               <a href="#">Мои заказы</a>
-                    </li>
-                    <li>
-       	               <a href="#">Личный кабинет</a>
-                    </li>
-    			</ul>
     		</div>
     		<nav class="main-navigation">
     			<ul>
-                <li>
-                  <a href="#">Главная</a>
-                </li>
-                <li>
-                  <a href="#">Компания</a>
-                </li>
-                <li>
-                  <a href="#">Католог</a>
-                </li>
-                <li>
-                  <a href="#">Новости</a>
-                </li>
-                <li>
-                  <a href="#">Спецпредложения</a>
-                </li>
-                <li>
-                  <a href="#">Доставка</a>
-                </li>
-                <li>
-                  <a href="#">Контакты</a>
-                </li>
-              </ul>
+            <li>
+              <a href="#">Главная</a>
+            </li>
+            <li>
+              <a href="#">Компания</a>
+            </li>
+            <li>
+              <a href="#">Католог</a>
+            </li>
+            <li>
+              <a href="#">Новости</a>
+            </li>
+            <li>
+              <a href="#">Спецпредложения</a>
+            </li>
+            <li>
+              <a href="#">Доставка</a>
+            </li>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
+          </ul>
     		</nav>
     	</div>
     </header>
@@ -79,85 +81,85 @@
     			<div class="foto-block__slider">
     				<div class="slider__paginator">
     					<a class="prev" href="#prev">Назад</a>
-                        <a class="next" href="#next">Вперёд</a>
+              <a class="next" href="#next">Вперёд</a>
     				</div>
-    			</div>
-    			<div class="foto-block__buttons">
-    				<span>NEW</span>
-                    <p>Материалы</p>
-                    <button type="submit" value="На любой вкус">
-                    <img class="icon" src="img/Layer 92.png" width="44" height="65">
-    			</div>
-    			<div class="foto-block__buttons">
-    				<p>Инструмент</p>
-                    <button class="materials__mini-block" type="submit" value="На все случаи">
-                    <img class="icon" src="img/Layer 96.png" width="75" height="61">
-    			</div>
-    			<div class="foto-block__buttons">
-    				<p>Техника</p>
-                    <button class="materials__mini-block" type="submit" value="Для стройки">
-                    <img class="icon" src="img/Layer 95.png" width="78" height="62">
-    			</div>
-    			<div class="foto-block__buttons">
-    				p>Скидки 50%</p>
-                    <button class="materials__mini-block" type="submit" value="На 350 товаров">
-                    <img class="icon" src="img/Layer 100.png" height="72" width="59">
-    			</div>
-    			<div class="foto-block__buttons">
-    				<p>Доставка</p>
-                    <button class="materials__mini-block" type="submit" value="бесплатно">
-                    <img class="icon" src="img/Layer 100.png" height="72" width="59">
-    			</div>
-    			<div class="slider__items">
-    				<div class="slider__item">
-    					<div class="catalog__info">
-    						<h2>ПЕРФОРАТОРЫ</h2>
-                            <p>Настоящие мужские игрушки</p>
-    					</div>
-    					<a href="#" class="btn">Открыть каталог</a>
-    				</div>
-    				<div class="slider__item">
-    					<div class="catalog__info">
-    						<h2>Дрели</h2>
-                            <p>Соедям на радость</p>
-    					</div>
-    					    <a href="#" class="btn">Открыть каталог</a>
-    				</div>
+    				<div class="slider__items">
+    				    <div class="slider__item">
+    					    <div class="catalog__info">
+    						    <h2>ПЕРФОРАТОРЫ</h2>
+                    <p>Настоящие мужские игрушки</p>
+    					    </div>
+    					      <a href="#" class="btn">Открыть каталог</a>
+    				    </div>
+    				    <div class="slider__item">
+    					    <div class="catalog__info">
+    						    <h2>Дрели</h2>
+                    <p>Соедям на радость</p>
+    					    </div>
+    					      <a href="#" class="btn">Открыть каталог</a>
+    				    </div>
+    			  </div>
+    			    <div class="foto-block__buttons">
+    				    <span class="label">NEW</span>
+                <p>Материалы</p>
+                <a href="#" class="slogan">На любой вкус</a>
+                <img class="button__icon" src="img/Layer 92.png" width="44" height="65">
+    			    </div>
+    			    <div class="foto-block__buttons">
+    				    <p>Инструмент</p>
+                <a href="#" class="slogan">На все случаи</a>
+                <img class="button__icon" src="img/Layer 96.png" width="75" height="61">
+    			    </div>
+    			    <div class="foto-block__buttons">
+    				    <p>Техника</p>
+                <a href="#" class="slogan">Для стройки</a>
+                <img class="button__icon" src="img/Layer 95.png" width="78" height="62">
+    			    </div>
+    			    <div class="foto-block__buttons">
+    				    <p>Скидки 50%</p>
+                <a href="#" class="slogan">На 350 товаров</a>
+                <img class="button__icon" src="img/Layer 100.png" height="72" width="59">
+    			    </div>
+    			    <div class="foto-block__buttons">
+    				    <p>Доставка</p>
+                <a href="#" class="slogan">бесплатно</a>
+                <img class="button__icon" src="img/Layer 100.png" height="72" width="59">
+    			    </div>
     			</div>
     		</div>
     		<div class="main-h2">
     			<h2>Популярные товары:</h2>
-                <a href="#">Все популярные товары</a>
+          <a href="#">Все популярные товары</a>
     		</div>
     		<div class="main-catalog__items">
-    			<article class="item">
+    			<article class="catalog__item">
     				<img src="img/snippet-32961 copy 3.jpg" height="164" width="184">
-                    <a href="#">Перфоратор BOSCH<br>BFG 9000</a>
-                    <div class="item__old-price">32500 P.</div>
-                    <div class="item__price">25500 P.</div>
+            <a class="name-company" href="#">Перфоратор BOSCH<br>BFG 9000</a>
+            <div class="item__old-price">32500 P.</div>
+            <div class="item__price">25500 P.</div>
     			</article>
-    			<article class="item">
+    			<article class="catalog__item">
     				<img src="img/snippet-18927 copy 3.jpg" height="112" width="127">
-                    <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
-                    <div class="item__old-price">22500 P.</div>
-                    <div class="item__price">15500 P.</div>
+            <a class="name-company" href="#">Перфоратор BOSCH<br>BFG 3000</a>
+            <div class="item__old-price">22500 P.</div>
+            <div class="item__price">15500 P.</div>
     			</article>
-    			<article class="item">
+    			<article class="catalog__item">
     				<img src="img/snippet-945 copy 2.jpg" height="128" width="144">
-                    <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
-                    <div class="item__old-price">30500 P.</div>
-                    <div class="item__price">25500 P.</div>
+            <a class="name-company" href="#">Перфоратор BOSCH<br>BFG 6000</a>
+            <div class="item__old-price">30500 P.</div>
+            <div class="item__price">25500 P.</div>
     			</article>
-    			<article class="item">
+    			<article class="catalog__item">
     				<span>NEW</span>
-                    <img src="img/snippet-18927 copy 3.jpg" height="112" width="127">
-                    <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
-                    <div class="item__price">12500 P.</div>
+            <img src="img/snippet-18927 copy 3.jpg" height="112" width="127">
+            <a class="name-company" href="#">Перфоратор BOSCH<br>BFG 2000</a>
+            <div class="item__price">12500 P.</div>
     			</article>
     		</div>
     		<div class="main-h2">
     			<h2>Популярные производители:</h2>
-                <a href="#">Все производители</a>
+          <a href="#">Все производители</a>
     		</div>
     		<div class="main-manufactures">
     			<div class="main-manufactures__branded-sign">
@@ -190,54 +192,56 @@
     			<div class="container">
     				<div class="services__descr">
     					<h2>Сервисы</h2>
-                        <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными</p>
+              <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными</p>
     				</div>
     				<div class="services__menu">
     					<a href="#">Доставка</a>
-                        <a href="#">Гарантия</a>
-                        <a href="#">Кредит</a>
+              <a href="#">Гарантия</a>
+              <a href="#">Кредит</a>
     				</div>
-    				<div class="services__items">
-    					<h2>ДОСТАВКА</h2>
-                        <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,<br>поднимая его на ваш на этаж!</p>
-                        <img src="img/Layer 131.png" height="146" width="206">
-    				</div>
-    				<div class="services__items">
-    					<h2>ДОСТАВКА</h2>
-                        <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,<br>поднимая его на ваш на этаж!</p>
-                        <img src="img/Layer 131.png" height="146" width="206">
-    				</div>
-    				<div class="services__items">
-    					<h2>ДОСТАВКА</h2>
-                        <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,<br>поднимая его на ваш на этаж!</p>
-                        <img src="img/Layer 131.png" height="146" width="206">
-    				</div>
+            <div class="services__items">
+    				  <div class="services__item">
+    					  <h2>ДОСТАВКА</h2>
+                <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,<br>поднимая его на ваш на этаж!</p>
+                <img src="img/Layer 131.png" height="146" width="206">
+    				  </div>
+    				  <div class="services__item">
+    					  <h2>ДОСТАВКА</h2>
+                <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,<br>поднимая его на ваш на этаж!</p>
+                <img src="img/Layer 131.png" height="146" width="206">
+    				  </div>
+    				  <div class="services__item">
+    					  <h2>ДОСТАВКА</h2>
+                <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,<br>поднимая его на ваш на этаж!</p>
+                <img src="img/Layer 131.png" height="146" width="206">
+    				  </div>
+            </div>
     			</div>
     		</div>
     		<section lass="clearfix">
     		    <div class="container">
     			    <div class="main__left-block main__about-company">
     			    	<h2>КОМПАНИЯ "ТЕХНОМАРТ"</h2>
-                        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br> строительства не оставить равнодушными любителей с экономить на гастарбайтерах.</p>
-                        <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>Техномарт работает со многими транспортными компаниями:</p>
-                        <ul class="list-styled">
-                            <li>
-                                <a href="#">Деловые линии</a>
-                            </li>
-                            <li>
-                                <a href="#">Автотрейдинг</a>
-                            </li>
-                            <li>
-                                <a href="#">ЖелДорЭкспедиция</a>
-                            </li>
-                        </ul>
-                            <a href="#">ПОДРОБНЕЕ О КОМПАНИИ</a>
+                <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br> строительства не оставить равнодушными любителей с экономить на гастарбайтерах.</p>
+                <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>Техномарт работает со многими транспортными компаниями:</p>
+                <ul class="list-styled">
+                  <li>
+                    <a href="#">Деловые линии</a>
+                  </li>
+                  <li>
+                    <a href="#">Автотрейдинг</a>
+                  </li>
+                  <li>
+                    <a href="#">ЖелДорЭкспедиция</a>
+                  </li>
+                </ul>
+                  <a href="#">ПОДРОБНЕЕ О КОМПАНИИ</a>
     			    </div>
     			    <div class="main__right-block">
     			    	h2>КОНТАКТЫ</h2>
-                        <p>Вы можете забрать товар сами,<br>Заехав в наш офис:</p>
-                        <img src="img/Слой 5.png" height="158" width="300" ait="Карта">
-                        <a href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
+                <p>Вы можете забрать товар сами,<br>Заехав в наш офис:</p>
+                <img src="img/Слой 5.png" height="158" width="300" ait="Карта">
+                <a href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
     			    </div>
     			</div>
     		</section>
@@ -290,21 +294,21 @@
      		<div class="container">
      			<div class="bottom-footer__informaition">
      				<p>2010-2016 Компания "Техномарт"<br>
-                    Все права защищены</p>
+            Все права защищены</p>
      			</div>
      			<div class="informaition__share">
      				<b>Соцсети</b>
-                    <a class="social social-vk" href="#"></a>
-                    <a class="social social-fb" href="#"></a>
-                    <a class="social social-in" href="#"></a>
+            <a class="social social-vk" href="#"></a>
+            <a class="social social-fb" href="#"></a>
+            <a class="social social-in" href="#"></a>
      			</div>
      			<div class="informaition__contact">
      				<p>Обратная связь:</p>
-                    <a href="#">mail@htmlacademy.ru</a>
+            <a href="#">mail@htmlacademy.ru</a>
      			</div>
      			<div class="informaition__author">
      				<p>Разработано-</p>
-                    <a href="#">htmlacademy.ru</a>
+            <a href="#">htmlacademy.ru</a>
      			</div>
      		</div>
      	</div>
