--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="utf-8">
@@ -26,6 +26,7 @@
             </li>
     			</ul>
     		</div>
+      </div>
     		<div class="container">
     			<div class="header-middle__summary">интернет-магазин строительных материалов и инструментов для ремонта
     			</div>
@@ -35,20 +36,20 @@
     			</div>
     			<div class="header-middle__making">
     			    <div class="header-middle__user">
-    				    <a href="#"><i class="icon-enter"></i>Вход</a>
+    				    <a href="#"><i class="icon-enter"></i>Войти</a>
                 <a href="#">Регистрация</a>
     			    </div>
-    			    <ul class="header-middle__data">
+    			    <!--<ul class="header-middle__data">
     				    <li>
        	          <a href="#">Мои заказы</a>
                 </li>
                 <li>
        	          <a href="#">Личный кабинет</a>
                 </li>
-    			    </ul>
+    			    </ul>!-->
     			</div>
     		</div>
-    		<nav class="main-navigation">
+    		<nav class="main-navigation clearfix">
     			<ul>
             <li>
               <a href="#">Главная</a>
@@ -73,7 +74,6 @@
             </li>
           </ul>
     		</nav>
-    	</div>
     </header>
     <main class="main-content">
     	<div class="container">
@@ -238,7 +238,7 @@
                   <a href="#">ПОДРОБНЕЕ О КОМПАНИИ</a>
     			    </div>
     			    <div class="main__right-block">
-    			    	h2>КОНТАКТЫ</h2>
+    			    	<h2>КОНТАКТЫ</h2>
                 <p>Вы можете забрать товар сами,<br>Заехав в наш офис:</p>
                 <img src="img/Слой 5.png" height="158" width="300" ait="Карта">
                 <a href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
