--- a/inner.html
+++ b/inner.html
@@ -6,7 +6,7 @@
       <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-      <header class="header-top">
+      <header class="header-main">
         <div class="header-top">
           <div class="container">
             <a href="#" class="header-top__logo">Техномарт</a>
@@ -27,7 +27,6 @@
                 </ul>
           </div>
           <div class="container">
-            <div class="header-middle">
               <div class="header-middle__summary">
                   интернет-магазин строительных материалов и инструментов для ремонта
               </div>
@@ -253,7 +252,7 @@
       <footer class="main-footer">
         <div class="container">
           <div class="contact-information">
-            <div class="contact-information__logo"><a href="#" class="header-top__logo">Техномарт</a></div>
+            <a href="#" class="contact-information__logo">Техномарт</a>
             <div class="contact-information__address">г. Санкт-Петербург, ул.Б.Конюшенная, д.19.8<br>+7 (812) 555-05-55</div>
           </div>
           <div class="main-footer__menu">
@@ -276,7 +275,7 @@
                 </li>
                 </ul>
             </div>
-          <div class="main-footer__menu__bottom">
+            <div class="main-footer__menu__bottom">
             <ul>
               <li>
                 <a href="#">Материалы</a>
@@ -291,11 +290,11 @@
                 <a href="#">Спецпредложение</a>
               </li>
             </ul>
-          </div>
+            </div>
           </div>
         </div>
-        <div class="main-footer__working-information">
-          <div class="container">
+        <div class="bottom-footer">
+          <div class="bottom-footer__container">
             <div class="informaition"> 
             <p>2010-2016 Компания "Техномарт"<br>
             Все права защищены</p>
