--- a/техномартindex.html
+++ b/техномартindex.html
@@ -66,6 +66,7 @@
      	<div class="bottom-footer">
      		<div class="container">
      			<div class="bottom-footer__informaition"></div>
+     			<div class="informaition__share"></div>
      			<div class="informaition__contact"></div>
      			<div class="informaition__author"></div>
      		</div>
