--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     			</ul>
     		</div>
       </div>
-    		<div class="container">
+    		<div class="container clearfix">
     			<div class="header-middle__summary">интернет-магазин строительных материалов и инструментов для ремонта
     			</div>
     			<div class="header-middle__contact">
@@ -77,56 +77,61 @@
     </header>
     <main class="main-content">
     	<div class="container">
-    		<div class="main-tabs">
-    			<div class="foto-block__slider">
-    				<div class="slider__paginator">
-    					<a class="prev" href="#prev">Назад</a>
-              <a class="next" href="#next">Вперёд</a>
-    				</div>
-    				<div class="slider__items">
-    				    <div class="slider__item">
-    					    <div class="catalog__info">
-    						    <h2>ПЕРФОРАТОРЫ</h2>
-                    <p>Настоящие мужские игрушки</p>
-    					    </div>
-    					      <a href="#" class="btn">Открыть каталог</a>
-    				    </div>
-    				    <div class="slider__item">
-    					    <div class="catalog__info">
-    						    <h2>Дрели</h2>
-                    <p>Соедям на радость</p>
-    					    </div>
-    					      <a href="#" class="btn">Открыть каталог</a>
-    				    </div>
-    			  </div>
-          </div>  
-    			    <div class="foto-block__buttons">
-    				    <span class="label">NEW</span>
+        <div class="main-tabs clearfix">
+          <div class="main-tabs__left">
+            <div class="foto-block__buttons">
+                <span class="label">NEW</span>
                 <p>Материалы</p>
                 <a href="#" class="slogan">На любой вкус</a>
                 <img class="button__icon" src="img/Layer 92.png" width="44" height="65">
-    			    </div>
-    			    <div class="foto-block__buttons">
-    				    <p>Инструмент</p>
+              </div>
+              <div class="foto-block__buttons">
+                <p>Инструмент</p>
                 <a href="#" class="slogan">На все случаи</a>
                 <img class="button__icon" src="img/Layer 96.png" width="75" height="61">
-    			    </div>
-    			    <div class="foto-block__buttons">
-    				    <p>Техника</p>
+              </div>
+              <div class="foto-block__slider">
+                <div class="slider__paginator">
+                  <a class="prev" href="#prev">Назад</a>
+                  <a class="next" href="#next">Вперёд</a>
+                </div>
+                <div class="slider__items">
+                  <div class="slider__item">
+                    <div class="catalog__info">
+                      <h2>ПЕРФОРАТОРЫ</h2>
+                      <p>Настоящие мужские игрушки</p>
+                    </div>
+                      <a href="#" class="btn">Открыть каталог</a>
+                  </div>
+                  <div class="slider__item">
+                    <div class="catalog__info">
+                      <h2>Дрели</h2>
+                      <p>Соедям на радость</p>
+                    </div>
+                      <a href="#" class="btn">Открыть каталог</a>
+                  </div>
+                </div>
+              </div>
+
+          </div>
+          <div class="main-tabs__right">
+            <div class="foto-block__buttons">
+                <p>Техника</p>
                 <a href="#" class="slogan">Для стройки</a>
                 <img class="button__icon" src="img/Layer 95.png" width="78" height="62">
-    			    </div>
-    			    <div class="foto-block__buttons">
-    				    <p>Скидки 50%</p>
+            </div>    
+            <div class="foto-block__buttons">
+                <p>Скидки 50%</p>
                 <a href="#" class="slogan">На 350 товаров</a>
                 <img class="button__icon" src="img/Layer 100.png" height="72" width="59">
-    			    </div>
-    			    <div class="foto-block__buttons">
-    				    <p>Доставка</p>
+            </div>
+            <div class="foto-block__buttons">
+                <p>Доставка</p>
                 <a href="#" class="slogan">бесплатно</a>
                 <img class="button__icon" src="img/Layer 100.png" height="72" width="59">
-    			    </div>
-    		</div>
+              </div>
+          </div>
+        </div>
     		<div class="main-h2">
     			<h2>Популярные товары:</h2>
           <a href="#">Все популярные товары</a>
@@ -188,7 +193,7 @@
     			</div>
     		</div>
     	</div>	
-    		<div class="main-services">
+    		<div class="main-services clearfix">
     			<div class="container">
     				<div class="services__descr">
     					<h2>Сервисы</h2>
@@ -246,7 +251,7 @@
     			</div>
     		</section>
     </main>
-    <footer class="main-footer">
+    <footer class="main-footer clearfix">
         <div class="container">
      		<div class="contact-information">
      			<a href="#" class="contact-information__logo">Техномарт</a>
