--- a/inner.html
+++ b/inner.html
@@ -47,7 +47,7 @@
                   </li>
                 </ul>
             </div>
-            <nav class="main-navigation">
+            <nav class="main-navigation clearfix">
                 <ul>
                   <li>
                     <a href="#">Главная</a>
@@ -144,7 +144,7 @@
                 <a href="#"><img src="icon-up-dir.png" width="11" height="10"></a>
               </div> 
             </div>
-            <div class="catalog-list">
+            <div class="catalog-list clearfix">
               <article class="catalog-list__item">
                 <span class="item__banner">NEW</span>
                 <img src="img/snippet-18927 copy 3.jpg" height="112" width="127">
