--- a/техномартindex.html
+++ b/техномартindex.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="utf-8">
@@ -10,7 +10,7 @@
     	<div class="header-top">
     		<div class="container">
             </div>
-            <div class="container">
+            <div class="container clearfix">
             	<div class="header-middle__summary"></div>
             	<div class="header-middle__contact"></div>
             	<div class="header-middle__making"></div>
@@ -20,13 +20,17 @@
     </header>
     <main class="main-content">
     	<div class="container">
-    		<div class="main-tabs">
-    			<div class="foto-block__buttons"></div>
-    			<div class="foto-block__buttons"></div>
-    			<div class="foto-block__buttons"></div>
-    			<div class="foto-block__buttons"></div>
-    			<div class="foto-block__buttons"></div>
-    			<div class="foto-block__slider"></div>
+    		<div class="main-tabs clearfix">
+    		    <div class="main-tabs__left">
+    		    	<div class="foto-block__buttons"></div>
+    			    <div class="foto-block__buttons"></div>
+    			    <div class="foto-block__slider"></div>
+    		    </div>
+    			<div class="main-tabs__right">
+    				<div class="foto-block__buttons"></div>
+    			    <div class="foto-block__buttons"></div>
+    			    <div class="foto-block__buttons"></div>
+    			</div>
     		</div>
     		<div class="main-h2"></div>
     		<div class="main-catalog__items">
@@ -47,7 +51,7 @@
     			<div class="main-manufactures__branded-sign"></div>
     		</div>
         </div>
-        <div class="main-services">
+        <div class="main-services clearfix">
         	<div class="container">
         		
         	</div>
