добавила распорку в footer

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
      			<a href="#" class="contact-information__logo">Техномарт</a>
      			<div class="contact-information__address">г. Санкт-Петербург, ул.Б.Конюшенная, д.19.8<br>+7 (812) 555-05-55</div>
      		</div>
-     		<div class="main-footer__menu">
+     		<div class="main-footer__menu clearfix">
      			<div class="main-footer__menu__top">
      				<ul>
      					<li>
