--- a/техномартindex.html
+++ b/техномартindex.html
@@ -62,10 +62,10 @@
         	</div>
         </section>
     </main>	
-     <footer class="main-footer">
+     <footer class="main-footer clearfix">
      	<div class="container">
      		<div class="contact-information"></div>
-     		<div class="main-footer__menu"></div>
+     		<div class="main-footer__menu clearfix"></div>
      	</div>
      	<div class="bottom-footer">
      		<div class="container">
