--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Техномарт</title>
+    <link href='https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -112,7 +113,6 @@
                   </div>
                 </div>
               </div>
-
           </div>
           <div class="main-tabs__right">
             <div class="foto-block__buttons">
