фотографии переименованы и расфасованы по папкам. Стилезован спрайт. Стилезован хедер index

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     		</div>
       </div>
     		<div class="container clearfix">
-    			<div class="header-middle__summary">интернет-магазин строительных материалов и инструментов для ремонта
+    			<div class="header-middle__summary">Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта
     			</div>
     			<div class="header-middle__contact">
     				<div class="header-middle__phone">+7(812)555-05-55</div>
@@ -51,29 +51,31 @@
     			</div>
     		</div>
     		<nav class="main-navigation clearfix">
-    			<ul>
-            <li>
-              <a href="#">Главная</a>
+          <div class="container">
+    			  <ul>
+              <li>
+                <a href="#">Главная</a>
+              </li>
+              <li>
+                <a href="#">Компания</a>
+              </li>
+              <li>
+                <a href="#">Католог</a>
+              </li>
+              <li>
+                <a href="#">Новости</a>
+              </li>
+              <li>
+                <a href="#">Спецпредложения</a>
+              </li>
+              <li>
+                <a href="#">Доставка</a>
+              </li>
+              <li>
+                <a href="#">Контакты</a>
             </li>
-            <li>
-              <a href="#">Компания</a>
-            </li>
-            <li>
-              <a href="#">Католог</a>
-            </li>
-            <li>
-              <a href="#">Новости</a>
-            </li>
-            <li>
-              <a href="#">Спецпредложения</a>
-            </li>
-            <li>
-              <a href="#">Доставка</a>
-            </li>
-            <li>
-              <a href="#">Контакты</a>
-            </li>
-          </ul>
+            </ul>
+          </div>
     		</nav>
     </header>
     <main class="main-content">
